# SteppableC

./: .gitignore  CMakeLists.txt  SteppableC.sublime-workspace  meson.build
docs/: _add.c.txt
docs/_add.c.dir/: _STP_Number_add.txt  _STP_Number_add_abs.txt
docs/stp_number.dir/: _add.c.txt  _alloc.c.txt  _cmp.c.txt  _div.c.txt  _karatsuba.c.txt  _mul.c.txt  _mul.h.txt  _print.c.txt  _scale.c.txt  _shift.c.txt  _sub.c.txt  _utils.h.txt  stp_number.c.txt  stp_number.h.txt
docs/stp_number.dir/_add.c.dir/: _STP_add64_carry.txt
docs/stp_number.dir/_karatsuba.c.dir/: _STP_Number_mul_abs_karatsuba.txt
docs/stp_number.dir/_utils.h.dir/: _STP_Number_add.txt  _STP_Number_add_abs.txt  _STP_Number_align_scales.txt  _STP_Number_bit_count.txt  _STP_Number_cmp_abs.txt  _STP_Number_ensure_capacity.txt  _STP_Number_lshift_blocks.txt  _STP_Number_mod10.txt  _STP_Number_mul.txt  _STP_Number_mul_exp.txt  _STP_Number_slice.txt  _STP_Number_sub_abs.txt  _STP_Number_trim.txt  _STP_add64_carry.txt  _STP_mul64_wide.txt
docs/stp_number.dir/stp_number.h.dir/: STP_Number.txt  STP_Number_abs.txt  STP_Number_add.txt  STP_Number_clear.txt  STP_Number_cmp.txt  STP_Number_conv.txt  STP_Number_copy.txt  STP_Number_destroy.txt  STP_Number_div.txt  STP_Number_exp.txt  STP_Number_init.txt  STP_Number_is_zero.txt  STP_Number_lshift.txt  STP_Number_mul.txt  STP_Number_print.txt  STP_Number_round.txt  STP_Number_rshift.txt  STP_Number_set.txt  STP_Number_sqr.txt  STP_Number_sub.txt  STP_Number_to_one.txt
docs/stp_string.dir/: _split.c.txt  _utils.c.txt  _utils.h.txt  stp_string.c.txt  stp_string.h.txt
docs/stp_string.dir/_utils.h.dir/: _STP_String_realloc.txt
docs/stp_string.dir/stp_string.h.dir/: STP_String.txt  STP_StringSplit.txt  STP_StringSplit_destroy.txt  STP_StringSplit_print.txt  STP_String_append.txt  STP_String_assign_buf.txt  STP_String_copy.txt  STP_String_destroy.txt  STP_String_eq.txt  STP_String_init.txt  STP_String_insert.txt  STP_String_length.txt  STP_String_lfind.txt  STP_String_lit.txt  STP_String_ltrim.txt  STP_String_prepend.txt  STP_String_remove.txt  STP_String_replace.txt  STP_String_rfind.txt  STP_String_rtrim.txt  STP_String_split.txt  STP_String_substr.txt  STP_String_tolower.txt  STP_String_toupper.txt  STP_String_trim.txt
include/: helpers.h
stp_number/: CMakeLists.txt  _abs.c  _add.c  _alloc.c  _cmp.c  _div.c  _exp.c  _karatsuba.c  _mul.c  _mul.h  _print.c  _round.c  _scale.c  _shift.c  _shift.h  _sqr.c  _sub.c  _utils.h  meson.build  number.c  stp_number.c  stp_number.h
stp_string/: CMakeLists.txt  _split.c  _utils.c  _utils.h  meson.build  stp_string.c  stp_string.h
tests/: _utils.h  meson.build  test_add.c  test_div.c  test_exp.c  test_mul.c  test_print.c  test_self_add.c  test_self_div.c  test_self_mul.c  test_self_sub.c  test_sqr.c  test_string.c  test_sub.c
tools/: check_out_accuracy.py  requirements.txt
tools/docgen/: __init__.py  __main__.py  _file.py  _format_docpage.py  _function.py  _parse_c.py  _parse_doc.py  _parse_fn.py  _parse_struct.py  _read_dir.py  _read_file.py  _search_file.py  _struct.py  errors_ref.txt
tools/docgen/handlers/: _arg_handler.py  _fld_handler.py  _modifies_handler.py  (+3 more)
