CMAKE_MINIMUM_REQUIRED(VERSION 4.0)

PROJECT(SteppableC)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# STP_STRING
FILE(GLOB STP_STRING_FILES stp_string/*.c)
ADD_LIBRARY(stp_string ${STP_STRING_FILES})

ADD_EXECUTABLE(test_string tests/test_string.c)
TARGET_LINK_LIBRARIES(test_string PUBLIC stp_string)

INCLUDE_DIRECTORIES(include/)
INCLUDE_DIRECTORIES(stp_string/)
