CMAKE_MINIMUM_REQUIRED(VERSION 4.0)

PROJECT(SteppableC)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_C_STANDARD 99)

INCLUDE_DIRECTORIES(include/)
INCLUDE_DIRECTORIES(stp_string/)

ADD_SUBDIRECTORY(stp_string)
ADD_SUBDIRECTORY(stp_number)

ADD_EXECUTABLE(test_string tests/test_string.c)
TARGET_LINK_LIBRARIES(test_string PUBLIC stp_string)
